@startuml Colonies
    skinparam linetype ortho
    
    class House{
        -name:string
        +postalAddress:string
        -postalCode:integer
        -nameStreet: string
        +capacity: integer
        --
        +createHouse(name,postalCode,nameStreet,capacity,region)
        +readHouse()
        +updateHouse(?name,?capacity,?region)
        +deleteHouse()
        +addKid(newKid)
        +addActivity(newActivity)
    }

    class Room{
        +code: string
        --
        +createRoom(code)
        +readRoom()
        +updateRoom(?code)
        +deleteRoom()
    }

    class Activity{
        -evaluation: float
        +name: string
        --
        +createActivity(name)
        +readActivity()
        +updateActivity(?name,?evaluation)
        +deleteActivity()
        +evaluate(grade,kid)
    }

    class Tutor{
        -name: string
        -phone: string
        --
        +createTutor(name,phone)
        +readTutor()
        +updateTutor(?name,?phone)
        +deleteTutor()
    }

    class Director{
        --
        +createDirector(name,phoned)
        +readDirector()
        +updateDirector(?name,?phone)
        +deleteDirector()
    }

    class Kid{
        -name: string
        -parentsPhone: string
        --
        +createKid(name,parentsPhone)
        +readKid()
        +updateKid(?name,?parentsPhone)
        +deleteKid()
    }

    class Region{
        -name: string
        +population: integer
        --
        +createRegion(name)
        +readRegion()
        +updateRegion(?name)
        +deleteRegion()
        +addHabitant()
    }

    House *-- Room
    Kid --o House
    Tutor --* House
    Director --* House
    Director -up-|> Tutor
    Activity --o House
    Region <-- Kid
    Region <-left- House
@enduml